--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,3 @@
-# reload config file (change file location to your the tmux.conf you want to use)
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
-
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
@@ -29,10 +25,13 @@ set-option -g renumber-windows on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'jamesoff/tmux-loadavg'
 
 # configuration of the plugins
 
 # catppuccin
+set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_middle_separator " | "
@@ -41,7 +40,7 @@ set -g @catppuccin_window_default_fill "none"
 
 set -g @catppuccin_window_current_fill "all"
 
-set -g @catppuccin_status_modules_right "application session user host date_time"
+set -g @catppuccin_status_modules_right "session directory cpu load date_time"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
 
