--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ for_window [class="^.*"] border pixel 1
 
 set $mod Mod1
 
-# exec --no-startup-id picom
+exec --no-startup-id picom
 exec_always --no-startup-id killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 exec_always --no-startup-id feh --bg-scale ~/.config/backgrounds/nice-blue-background.png
