--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,32 +1,3 @@
-[colors]
-base = #1e1e2e
-mantle = #181825
-crust = #11111b
-text = #cdd6f4
-subtext0 = #a6adc8
-subtext1 = #bac2de
-surface0 = #313244
-surface1 = #45475a
-surface2 = #585b70
-overlay0 = #6c7086
-overlay1 = #7f849c
-overlay2 = #9399b2
-blue = #89b4fa
-lavender = #b4befe
-sapphire = #74c7ec
-sky = #89dceb
-teal = #94e2d5
-green = #a6e3a1
-yellow = #f9e2af
-peach = #fab387
-maroon = #eba0ac
-red = #f38ba8
-mauve = #cba6f7
-pink = #f5c2e7
-flamingo = #f2cdcd
-rosewater = #f5e0dc
-transparent = #FF00000
-
 ;==========================================================
 ;
 ;
@@ -46,30 +17,29 @@ transparent = #FF00000
 ;==========================================================
 
 [colors]
-background = ${colors.base}
-background-alt = ${colors.blue}
-foreground = ${colors.text}
-primary = ${colors.mauve}
-secondary = ${colors.mantle}
-alert = ${colors.red}
-disabled = ${colors.subtext1}
+background = #00141A
+background-alt = #373B41
+; foreground = #C5C0C6
+foreground = #C5C0C6
+primary = #2AA198
+secondary = #29EEDF
+alert = #A54242
+disabled = #707880
 
 [bar/toph]
-monitor = ${env:MONITOR:}
 width = 100%
-height = 28pt
-radius = 0
+height = 18pt
+radius = 5
 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = true
+line-size = 3pt
 
-line-size = 6pt
-
-#border-size = 4pt
+border-top-size = 0pt
+border-size = 5pt
 border-color = #00000000
 
 padding-left = 0
@@ -78,12 +48,12 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.flamingo}
+separator-foreground = ${colors.disabled}
 
-font-0 = JetBrains Mono Nerd Font:size=13;6
+font-0 = MesloLGS Nerd Font:size=10;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-right =  pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -106,9 +76,8 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.mauve}
-label-active-foreground = ${colors.crust}
-label-active-underline= ${colors.lauve}
+label-active-background = ${colors.background-alt}
+label-active-underline= ${colors.primary}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -175,31 +144,6 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-[module/battery]
-type = internal/battery
-format-prefix = "BAT "
-format-prefix-foreground = ${colors.primary}
-full-at = 99
-format-charging = <animation-charging> <label-charging>
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-; Framerate in milliseconds
-animation-charging-framerate = 750
-animation-charging-foreground = ${colors.peach}
-format-discharging = <ramp-capacity> <label-discharging>
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-low-at = 5
-battery = BAT1
-adapter = ACAD
-poll-interval = 5
-
 [network-base]
 type = internal/network
 interval = 5
@@ -210,7 +154,7 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
