--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,6 +14,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Enable true color
+set-option -a terminal-features 'xterm-256color:RGB'
+
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
 setw -g pane-base-index 1
