feat: customize polybar with catppuccin mocha

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -16,15 +16,8 @@
 ;
 ;==========================================================
 
-[colors]
-background = #00141A
-background-alt = #373B41
-; foreground = #C5C0C6
-foreground = #C5C0C6
-primary = #2AA198
-secondary = #29EEDF
-alert = #A54242
-disabled = #707880
+[global/wm]
+include-file = "$HOME/.config/polybar/themes/mocha.ini"
 
 [bar/toph]
 width = 100%
@@ -33,13 +26,13 @@ radius = 5
 
 ; dpi = 96
 
-background = ${colors.background}
+background = ${colors.base}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-top-size = 0pt
-border-size = 5pt
+border-top-size = 3pt
+border-size = 3pt
 border-color = #00000000
 
 padding-left = 0
@@ -48,12 +41,12 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.disabled}
+separator-foreground = ${colors.rosewater}
 
 font-0 = MesloLGS Nerd Font:size=10;2
 
 modules-left = xworkspaces xwindow
-modules-right =  pulseaudio memory cpu date
+modules-right =  pulseaudio wired-network memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -62,7 +55,7 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
 ; override-redirect = true
 
@@ -76,8 +69,8 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+label-active-background = ${colors.sapphire}
+label-active-underline= ${colors.transparent}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -94,6 +87,8 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
+
+format-foreground = ${colors.text}
 
 [module/filesystem]
 type = internal/fs
@@ -134,14 +129,15 @@ label-indicator-background = ${colors.secondary}
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.sapphire}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.sky}
+format-prefix-background = ${colors.base}
 label = %percentage:2%%
 
 [network-base]
