--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -41,12 +41,12 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.rosewater}
+separator-foreground = ${colors.sapphire}
 
-font-0 = MesloLGS Nerd Font:size=10;2
+font-0 = MesloLGS Nerd Font:size=11;2
 
 modules-left = xworkspaces xwindow
-modules-right =  pulseaudio wired-network memory cpu date
+modules-right =  pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -105,7 +105,7 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix-foreground = ${colors.sapphire}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
