--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -22,7 +22,7 @@ include-file = "$HOME/.config/polybar/themes/catppuccin-mocha.ini"
 [bar/toph]
 width = 100%
 height = 18pt
-radius = 5
+radius = 0
 
 ; dpi = 96
 
@@ -31,8 +31,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-top-size = 3pt
-border-size = 3pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
@@ -46,7 +45,7 @@ separator-foreground = ${colors.sapphire}
 font-0 = MesloLGS Nerd Font:size=11;2
 
 modules-left = xworkspaces xwindow
-modules-right =  pulseaudio memory cpu date
+modules-right = xkeyboard pulseaudio memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
