--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -116,7 +116,7 @@ label-muted-foreground = ${colors.disabled}
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%
+label-layout = %layout%-%variant%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
