--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -27,7 +27,7 @@ radius = 0
 ; dpi = 96
 
 background = ${colors.base}
-foreground = ${colors.foreground}
+foreground = ${colors.text}
 
 line-size = 3pt
 
@@ -54,7 +54,7 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-wm-restack = i3
+; wm-restack = i3
 
 ; override-redirect = true
 
@@ -76,11 +76,11 @@ label-occupied = %name%
 label-occupied-padding = 1
 
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
 label-empty = %name%
-label-empty-foreground = ${colors.disabled}
+label-empty-foreground = ${colors.red}
 label-empty-padding = 1
 
 [module/xwindow]
@@ -98,7 +98,7 @@ mount-0 = /
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+label-unmounted-foreground = ${colors.red}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -110,19 +110,18 @@ format-volume = <label-volume>
 label-volume = %percentage%%
 
 label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted-foreground = ${colors.red}
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
 label-layout = %layout%-%variant%
-label-layout-foreground = ${colors.primary}
+label-layout-foreground = ${colors.text}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-foreground = ${colors.text}
 
 [module/memory]
 type = internal/memory
@@ -164,7 +163,7 @@ date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.text}
 
 [settings]
 screenchange-reload = true
