feat: configure foreground of the active label to darker
improve the lisibility of the active label

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -68,6 +68,7 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
+label-active-foreground = ${colors.base}
 label-active-background = ${colors.sapphire}
 label-active-underline= ${colors.transparent}
 label-active-padding = 1
