feat: switch from tmux/catppuccin to tmux/tokyonight (default night version)

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,6 +14,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# reload tmux
+bind r source-file ~/.config/tmux/tmux.conf
+
+source-file ~/.config/tmux/tokyonight_night.tmux
+# source-file ~/.config/tmux/tokyonight_day.tmux
+
 # Enable true color
 set-option -a terminal-features 'xterm-256color:RGB'
 
@@ -32,27 +38,6 @@ set-option -g renumber-windows on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'jamesoff/tmux-loadavg'
-
-# configuration of the plugins
-
-# catppuccin
-set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
-
-set -g @catppuccin_window_default_fill "none"
-
-set -g @catppuccin_window_current_fill "all"
-
-set -g @catppuccin_status_modules_right "session directory cpu load date_time"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
