--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,10 +24,11 @@ source-file ~/.config/tmux/tokyonight_night.tmux
 set-option -a terminal-features 'xterm-256color:RGB'
 
 # fix solarized-osaka (https://github.com/craftzdog/solarized-osaka.nvim?tab=readme-ov-file#fix-undercurls-in-tmux)
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-set -as terminal-features ",alacritty:RGB"
+# set -g default-terminal "${TERM}"
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+# set -as terminal-features ",alacritty:RGB"
+
 # Start windows and panes index at 1, not 0.
 set -g base-index 1
 setw -g pane-base-index 1
