fix: patch for neovim

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -36,6 +36,11 @@ setw -g pane-base-index 1
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
 
+# fix neovim healtcheck
+set-option -sg escape-time 10
+set-option -g focus-events on
+set-option -g default-terminal "screen-256color"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
