refactor: i3 / change kill shortcut to mod+shift+d

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -61,7 +61,7 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec wezterm
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+Shift+d kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id rofi -show drun
