--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -62,6 +62,7 @@ bindsym $mod+Return exec wezterm
 
 # kill focused window
 bindsym $mod+Shift+d kill
+bindsym $mod+d kill
 bindsym $mod+F4 kill
 
 # start dmenu (a program launcher)
