feat: polybar / change theme + add powermenu

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -17,17 +17,15 @@
 ;==========================================================
 
 [global/wm]
-include-file = "$HOME/.config/polybar/themes/catppuccin-mocha.ini"
+include-file = "$HOME/.config/polybar/themes/tokyonight-custom.ini"
 
-[bar/toph]
+[bar/top]
 width = 100%
-height = 18pt
+height = 14pt
 radius = 0
 
-; dpi = 96
-
-background = ${colors.base}
-foreground = ${colors.text}
+background = ${colors.background}
+foreground = ${colors.foreground}
 
 line-size = 3pt
 
@@ -40,25 +38,21 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.sapphire}
+separator-foreground = ${colors.separator-fg}
 
-font-0 = MesloLGS Nerd Font:size=11;2
+font-0 = MesloLGS Nerd Font:size=10;2
+font-1 = MesloLGS Nerd Font:size=11:weight=bold;2
+font-2 = MesloLGS Nerd Font:size=11:weight=bold;4
 
 modules-left = xworkspaces xwindow
-modules-right = xkeyboard pulseaudio memory cpu date
+modules-center = xwindow
+modules-right = memory cpu pulseaudio xkeyboard date sysmenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
-
-[module/systray]
 type = internal/tray
 
 format-margin = 8pt
@@ -68,106 +62,124 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-foreground = ${colors.base}
-label-active-background = ${colors.sapphire}
+label-active-foreground = ${colors.tab-active-fg}
+label-active-background = ${colors.tab-active-bg}
 label-active-underline= ${colors.transparent}
 label-active-padding = 1
+label-active-font = 3
 
 label-occupied = %name%
+label-occupied-foreground = ${colors.tab-inactive-fg}
+label-occupied-background = ${colors.tab-inactive-bg}
 label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.red}
-label-urgent-padding = 1
+label-occupied-font = 3
 
 label-empty = %name%
-label-empty-foreground = ${colors.red}
 label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
 
-format-foreground = ${colors.text}
+label-font = 2
 
-[module/filesystem]
-type = internal/fs
-interval = 25
+[module/memory]
+type = internal/memory
+interval = 2
 
-mount-0 = /
+format-prefix = 
+format-prefix-foreground = ${colors.memory-prefix-fg}
+format-prefix-padding-right = 2
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+format = <label> <bar-used>
 
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.red}
+bar-used-indicator =
+bar-used-width = 12
+bar-used-foreground-0 = ${colors.ramp-0}
+bar-used-foreground-1 = ${colors.ramp-1}
+bar-used-foreground-2 = ${colors.ramp-2}
+bar-used-foreground-3 = ${colors.ramp-3}
+bar-used-fill = ▐
+bar-used-empty = ▐
+bar-used-empty-foreground = ${colors.empty-fg}
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+
+format-prefix =  
+format-prefix-foreground = ${colors.cpu-prefix-fg}
+format-prefix-padding-right = 2
+
+format = <label> <bar-load>
+
+bar-load-indicator =
+bar-load-width = 12
+bar-load-foreground-0 = ${colors.ramp-0}
+bar-load-foreground-1 = ${colors.ramp-1}
+bar-load-foreground-2 = ${colors.ramp-2}
+bar-load-foreground-3 = ${colors.ramp-3}
+bar-load-fill = ▐
+bar-load-empty = ▐
+bar-load-empty-foreground = ${colors.empty-fg}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.sapphire}
-format-volume = <label-volume>
+format-volume = <ramp-volume> <label-volume>
 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 =  
+
+ramp-volume-0-foreground = ${colors.ramp-0}
+ramp-volume-1-foreground = ${colors.ramp-2}
+ramp-volume-2-foreground = ${colors.ramp-3}
+
+label-muted = 
+label-muted-foreground = ${colors.audio-inactive-fg}
+label-muted-padding-right = 1
+ 
 label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.red}
+label-volume-padding-left = 1
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%-%variant%
-label-layout-foreground = ${colors.text}
+format-prefix =  
+format-prefix-foreground = ${colors.keyboard-prefix-fg}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.text}
+format = <label-layout>  <label-indicator>
 
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.sapphire}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.sky}
-format-prefix-background = ${colors.base}
-label = %percentage:2%%
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-layout = %name%
+label-layout-padding-left = 2
 
 [module/date]
 type = internal/date
 interval = 1
 
+format-prefix = 
+format-prefix-padding-right = 2
+format-prefix-foreground = ${colors.date-prefix-fg}
+format-prefix-font = 2
+
+label = %date%
+label-font = 1
+
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
-label = %date%
-label-foreground = ${colors.text}
+[module/sysmenu]
+type = custom/text
+
+format = 
+format-foreground = ${colors.sysmenu-fg}
+format-padding = 2
+format-font = 2
+
+click-left = ~/.config/polybar/scripts/powermenu.sh &
 
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
