--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -16,7 +16,7 @@ set $mod Mod1
 exec --no-startup-id picom
 exec_always --no-startup-id killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
-exec_always --no-startup-id feh --bg-scale ~/.config/backgrounds/nice-blue-background.png
+exec_always --no-startup-id feh --bg-scale ~/.config/backgrounds/wallpaper.jpg
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -36,7 +36,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- magick ~/.config/backgrounds/wallpaper-blur.jpg RGB:- | i3lock -e -f -k --nofork --raw 2560x1440:rgb --image /dev/stdin
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -67,6 +67,7 @@ bindsym $mod+F4 kill
 
 # start dmenu (a program launcher)
 bindsym $mod+space exec --no-startup-id rofi -show drun
+bindsym $mod+shift+space exec --no-startup-id ~/.config/polybar/scripts/powermenu.sh
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
