feat: lightdm / update bar
add clock, layout, language
remove a11y

--- a/lightdm/lightdm-gtk-greeter.conf
+++ b/lightdm/lightdm-gtk-greeter.conf
@@ -1,3 +1,4 @@
 [greeter]
+indicators = ~host;~spacer;~clock;~spacer;~layout;~language;~session;~power
 background=/usr/share/backgrounds/lightdm/wallpaper-blur.jpg
 font-name=MesloLGS Nerd Font
