--- a/i3/dot-config/i3/config
+++ b/i3/dot-config/i3/config
@@ -65,6 +65,9 @@ bindsym $mod+Shift+d kill
 bindsym $mod+d kill
 bindsym $mod+F4 kill
 
+# Toggle polybar
+bindsym $mod+p exec polybar-msg cmd toggle
+
 # start firefox
 bindsym $mod+b exec --no-startup-id firefox
 
